--- a/mediapipe/암컬 인식/aramcurl.ipynb
+++ b/mediapipe/암컬 인식/aramcurl.ipynb
@@ -96,7 +96,10 @@
     "        # Pose에서 데이터를 가져와서 랜드마크 그리기\n",
     "        mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_pose.POSE_CONNECTIONS,\n",
     "                                # 랜드마크 색상 변경\n",
+    "                                # thickness  = 두께 ,  circle_radius = 원크기\n",
+    "                                #원\n",
     "                                mp_drawing.DrawingSpec(color=(245,117,66), thickness=2, circle_radius=2), \n",
+    "                                #선\n",
     "                                mp_drawing.DrawingSpec(color=(245,66,230), thickness=2, circle_radius=2) \n",
     "                                 )               \n",
     "        \n",
@@ -107,6 +110,13 @@
     "\n",
     "    cap.release()\n",
     "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 조인트 확인"
    ]
   },
   {
@@ -2666,9 +2676,11 @@
     "        image.flags.writeable = True\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
     "        \n",
-    "        # 랜드마크 추출\n",
+    "        # 오류가 발생하면 except구문 실행 아니면 try구문 실행\n",
     "        try:\n",
+    "            # 랜드마크 값을 변수에 입력\n",
     "            landmarks = results.pose_landmarks.landmark\n",
+    "            # 랜드마크 좌표 출력\n",
     "            print(landmarks)\n",
     "        except:\n",
     "            pass\n",
@@ -2706,6 +2718,7 @@
     }
    ],
    "source": [
+    "# 랜드마크 함수의 리스트 개수 출력\n",
     "len(landmarks)"
    ]
   },
@@ -2755,6 +2768,7 @@
     }
    ],
    "source": [
+    "# 랜드마크 포즈 출력\n",
     "for lndmrk in mp_pose.PoseLandmark:\n",
     "    print(lndmrk)"
    ]
@@ -2776,6 +2790,7 @@
     }
    ],
    "source": [
+    "# 랜드마크에 저장된 Left_Shoulder의 값\n",
     "landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].visibility"
    ]
   },
@@ -2799,6 +2814,7 @@
     }
    ],
    "source": [
+    "# 랜드마크에 저장된 Left_Elbow의 x,y,z의 값 출력\n",
     "landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value]"
    ]
   },
@@ -2822,7 +2838,15 @@
     }
    ],
    "source": [
-    "landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value]"
+    "# 랜드마크에 저장된 Left_Wrist의 x,y,z의 값 출력l\n",
+    "andmarks[mp_pose.PoseLandmark.LEFT_WRIST.value]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 각도 계산"
    ]
   },
   {
@@ -2831,14 +2855,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 새로 함수를 생산\n",
     "def calculate_angle(a,b,c):\n",
+    "    # 배열 형태\n",
     "    a = np.array(a) # First\n",
     "    b = np.array(b) # Mid\n",
     "    c = np.array(c) # End\n",
     "    \n",
+    "    # 각도계산\n",
+    "    #                     Y값          X값\n",
+    "    # 아크탄젠트로 C(끝)과 B(중간)의 각도를 구함  - A와 B의 각도를 구함\n",
+    "    # arctan2는 각도를 360도(0~180,0~-180)로 구할 수 있음\n",
     "    radians = np.arctan2(c[1]-b[1], c[0]-b[0]) - np.arctan2(a[1]-b[1], a[0]-b[0])\n",
+    "    #                             원주율\n",
     "    angle = np.abs(radians*180.0/np.pi)\n",
     "    \n",
+    "    # 팔이 꺾여서 인식이 잘못되는 걸 방지\n",
     "    if angle >180.0:\n",
     "        angle = 360-angle\n",
     "        \n",
@@ -2851,6 +2883,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#각 shoulder, elbow, writst에 랜드마크 값을 삽입\n",
+    "#이때 shoulder, elobw, wirtst 대신 어깨, 엉덩이, 무릎으로 지정시 스쿼트 자세 교정 프로그램 가능\n",
     "shoulder = [landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].x,landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].y]\n",
     "elbow = [landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].x,landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].y]\n",
     "wrist = [landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].x,landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].y]"
@@ -2875,6 +2909,7 @@
     }
    ],
    "source": [
+    "# 값 출력\n",
     "shoulder, elbow, wrist"
    ]
   },
@@ -2895,6 +2930,7 @@
     }
    ],
    "source": [
+    "# 각 계산\n",
     "calculate_angle(shoulder, elbow, wrist)"
    ]
   },
@@ -2915,6 +2951,7 @@
     }
    ],
    "source": [
+    "# 팔꿈치의 좌표값을 640,480 배열에 곱한후 int형태로 지정\n",
     "tuple(np.multiply(elbow, [640, 480]).astype(int))"
    ]
   },
@@ -2930,32 +2967,38 @@
     "    while cap.isOpened():\n",
     "        ret, frame = cap.read()\n",
     "        \n",
-    "        # Recolor image to RGB\n",
+    "        # 영상을 BRG에서 RGB로 변환\n",
     "        image = cv2.cvtColor(frame, cv2.COLOR_BGR2RGB)\n",
     "        image.flags.writeable = False\n",
     "      \n",
-    "        # Make detection\n",
+    "        # 포즈 프레임 불러오기\n",
     "        results = pose.process(image)\n",
     "    \n",
-    "        # Recolor back to BGR\n",
+    "        # 영상을 RGB에서 BRG로 전환\n",
     "        image.flags.writeable = True\n",
     "        image = cv2.cvtColor(image, cv2.COLOR_RGB2BGR)\n",
     "        \n",
-    "        # Extract landmarks\n",
+    "        # 랜드마크 추출\n",
+    "        # 오류가 발생하면 except구문 실행 아니면 try구문 실행\n",
     "        try:\n",
+    "            # 랜드마크 불러오기\n",
     "            landmarks = results.pose_landmarks.landmark\n",
     "            \n",
-    "            # Get coordinates\n",
+    "            # 좌표\n",
     "            shoulder = [landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].x,landmarks[mp_pose.PoseLandmark.LEFT_SHOULDER.value].y]\n",
     "            elbow = [landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].x,landmarks[mp_pose.PoseLandmark.LEFT_ELBOW.value].y]\n",
     "            wrist = [landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].x,landmarks[mp_pose.PoseLandmark.LEFT_WRIST.value].y]\n",
     "            \n",
-    "            # Calculate angle\n",
+    "            # 각도 계산\n",
     "            angle = calculate_angle(shoulder, elbow, wrist)\n",
     "            \n",
-    "            # Visualize angle\n",
+    "            # 각도 표시\n",
+    "            #    이미지형태에 삽입 , 팔꿈치에 삽입\n",
     "            cv2.putText(image, str(angle), \n",
+    "                            # 팔꿈치의 좌표값을 640,480 배열에 곱한후 int형태로 지정\n",
+    "                            # 화면에 맞는 팔꿈치 값 지정\n",
     "                           tuple(np.multiply(elbow, [640, 480]).astype(int)), \n",
+    "                            #        폰트지정        크기        색상       두께  선종류\n",
     "                           cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 2, cv2.LINE_AA\n",
     "                                )\n",
     "                       \n",
@@ -2963,7 +3006,7 @@
     "            pass\n",
     "        \n",
     "        \n",
-    "        # Render detections\n",
+    "        # 랜드마크 탐지\n",
     "        mp_drawing.draw_landmarks(image, results.pose_landmarks, mp_pose.POSE_CONNECTIONS,\n",
     "                                mp_drawing.DrawingSpec(color=(245,117,66), thickness=2, circle_radius=2), \n",
     "                                mp_drawing.DrawingSpec(color=(245,66,230), thickness=2, circle_radius=2) \n",
@@ -2979,41 +3022,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 최종 암컬 카운터"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m'Python 3.9.11 64-bit'(으)로 셀을 실행하려면 ipykernel 패키지가 필요합니다.\n",
+      "\u001b[1;31m다음 명령어를 실행하여 Python 환경에 'ipykernel'을(를) 설치합니다. \n",
+      "\u001b[1;31m 명령: 'c:/msys64/mingw64/bin/python.exe -m pip install ipykernel -U --user --force-reinstall'"
      ]
     }
    ],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
     "\n",
-    "# Curl counter variables\n",
+    "# 카운터에 사용할 변수 지정\n",
+    "# 횟수\n",
     "counter = 0 \n",
+    "# 팔의 상황\n",
     "stage = None\n",
     "\n",
     "## Setup mediapipe instance\n",
@@ -3050,9 +3087,11 @@
     "                           cv2.FONT_HERSHEY_SIMPLEX, 0.5, (255, 255, 255), 2, cv2.LINE_AA\n",
     "                                )\n",
     "            \n",
-    "            # Curl counter logic\n",
+    "            # 암컬 카운터 알고리즘\n",
+    "            # 각도가 160도 이상이면 down으로 인식\n",
     "            if angle > 160:\n",
     "                stage = \"down\"\n",
+    "            # 각도가 30도 이하고 상태가 down 이면 up으로 만들고 1증가\n",
     "            if angle < 30 and stage =='down':\n",
     "                stage=\"up\"\n",
     "                counter +=1\n",
@@ -3061,23 +3100,36 @@
     "        except:\n",
     "            pass\n",
     "        \n",
-    "        # Render curl counter\n",
-    "        # Setup status box\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        # 암컬 카운터 진행\n",
+    "        # 현재 상황 표시\n",
+    "        # 직사각형 생성 형태 시작점    종료점       색상      분수비트\n",
     "        cv2.rectangle(image, (0,0), (225,73), (245,117,16), -1)\n",
     "        \n",
-    "        # Rep data\n",
+    "        # 횟수\n",
+    "        # 텍스트입력 형태    텍스트   좌표\n",
     "        cv2.putText(image, 'REPS', (15,12), \n",
+    "                    #     폰트지정            크기    색상   두께     선종류\n",
     "                    cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0,0,0), 1, cv2.LINE_AA)\n",
+    "        #                   문자열 형태로 카운터 삽입\n",
     "        cv2.putText(image, str(counter), \n",
     "                    (10,60), \n",
     "                    cv2.FONT_HERSHEY_SIMPLEX, 2, (255,255,255), 2, cv2.LINE_AA)\n",
     "        \n",
-    "        # Stage data\n",
+    "        # up 인지 down인지\n",
     "        cv2.putText(image, 'STAGE', (65,12), \n",
     "                    cv2.FONT_HERSHEY_SIMPLEX, 0.5, (0,0,0), 1, cv2.LINE_AA)\n",
     "        cv2.putText(image, stage, \n",
     "                    (60,60), \n",
     "                    cv2.FONT_HERSHEY_SIMPLEX, 2, (255,255,255), 2, cv2.LINE_AA)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
     "        \n",
     "        \n",
     "        # Render detections\n",
@@ -3098,7 +3150,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.8 64-bit",
+   "display_name": "Python 3.9.11 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -3112,12 +3164,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.11"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f6c3fe0f35ac205adeee3d33d4d27f45ea8735944f6bcc7cc4d72c9672a115a8"
+    "hash": "2a8dfe095fce2b5e88c64a2c3ee084c8e0e0d70b23e7b95b1cfb538be294c5c8"
    }
   }
  },
